# OC-space

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: oc_space_experiment.py
notebooks/: paper_results.ipynb
scripts/: run.sh
src/: depth_first_ocenum.py  util.py  verification.py
src/index/: index.py
